Improve button debug #31 Improve stroke func trying to approach use of borders Delete `event-colors` from block model Delete `event-colors` from text model Improve block model of card model Amend card model colors Amend control-border model color Amend control-underline model colors Amend layout model colors Amend list-switcher model colors Amend text-field model colors Trying to approach use of borders in group model Fix aligning of inline model

--- a/core/_library.scss
+++ b/core/_library.scss
@@ -163,7 +163,7 @@
     $result: append($result, nth($stroke, 4) nth($stroke, 3) 0 0 $color inset, comma);
   }
 
-  @return (result: $result, stroke: $stroke);
+  @return (result: $result, stroke: $stroke, color: $color);
 }
 
 // @stroke-blink   Make a component blink
@@ -268,6 +268,7 @@
     $stroke-border: stroke-border($border, $stroke);
     $result: join($result, map-get($stroke-border, result), comma);
     $stroke: map-get($stroke-border, stroke);
+    border-color: map-get($stroke-border, color);
   }
   @if($blink) {
     $stroke-blink: stroke-blink($blink, $stroke);
